test/errors/error34.vult
type x {
  val e : int;
  val e : int;
}